--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://4n4l1st4.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
